# HugipAssistant

./: .gitignore  admin.py  app.py  clear_pinecone.py  pyproject.toml  requirements.txt  setup_pinecone.py  test_modular.py  test_phase4_real_pinecone_rag.py  test_pinecone_retrieval.py  test_reflection.py  upload_pdfs.py
src/: __init__.py
src/core/: __init__.py  config.py
src/database/: __init__.py  feedback_db.py
src/graph/: __init__.py  graph.py  state.py
src/graph/nodes/: __init__.py  generation.py  rag.py  reflection.py  router.py
src/graph/nodes/graders/: __init__.py  answer_grader.py  hallucination_grader.py  relevance_grader.py
src/services/: __init__.py  llm_services.py  memory_service.py  vectorstore_service.py
tests/: test_memory.py  test_modular.py  upload_events.py
